--- a/SmartMarathon.App/Resources.es.resx
+++ b/SmartMarathon.App/Resources.es.resx
@@ -243,4 +243,7 @@
   <data name="Label_Time" xml:space="preserve">
     <value>TIEMPO</value>
   </data>
+  <data name="Label_Or" xml:space="preserve">
+    <value>o</value>
+  </data>
 </root>
